# servant-swagger-ui

./: .gitignore  .travis.yml  README.md  cabal.project  stack.yaml
servant-openapi-ui/: index.html.tmpl  servant-openapi-ui.cabal
servant-openapi-ui-core/: CHANGELOG.md  servant-openapi-ui-core.cabal
servant-openapi-ui-core/src/Servant/OpenApi/UI/: Core.hs
servant-openapi-ui-example/: servant-openapi-ui-example.cabal
servant-openapi-ui-example/src/: Main.hs
servant-openapi-ui/src/Servant/OpenApi/: UI.hs
servant-swagger-ui-example/: servant-swagger-ui-example.cabal
servant-swagger-ui-example/src/: Main.hs
