cabal-version:      1.12
name:               servant-openapi-ui-core
version:            0.0.1.0
x-revision:         0
synopsis:           Servant OpenApi ui core components
category:           Web, Servant, OpenAPI
description:
  Provide embedded OpenApi UI for servant and OpenApi (i.e. servant-openapi3)
  .
  See servant-openapi3-ui for "concrete" implementations.

homepage:           https://github.com/typeable/servant-swagger-ui
bug-reports:
  https://github.com/typeable/servant-swagger-ui/issues

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD3
license-file:       LICENSE
build-type:         Simple
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.2

extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/typeable/servant-swagger-ui

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
      base                 >=4.7      && <4.15
    , blaze-markup         >=0.7.0.2  && <0.9
    , bytestring           >=0.10.4.0 && <0.11
    , http-media           >=0.7.1.3  && <0.9
    , servant              >=0.14     && <0.19
    , servant-blaze        >=0.8      && <0.10
    , servant-server       >=0.14     && <0.19
    , openapi3             >=3        && <3.1
    , text                 >=1.2.3.0  && <1.3
    , transformers         >=0.3      && <0.6
    , transformers-compat  >=0.3      && <0.7
    , wai-app-static       >=3.0.1.1  && <3.2

  exposed-modules:  Servant.OpenApi.UI.Core
  default-language: Haskell2010
