cabal-version: 2.0
name:          servant-openapi-ui-example
version:       0.0.1.0
synopsis:      Servant
category:      Web, Servant, OpenAPI
description:   A kind of test-suite of servant-openapi-ui
homepage:      https://github.com/typeable/servant-swagger-ui
bug-reports:
  https://github.com/typeable/servant-swagger-ui/issues

author:        Oleg Grenrus <oleg.grenrus@iki.fi>
license:       BSD3
license-file:  LICENSE
build-type:    Simple
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.2

source-repository head
  type:     git
  location: https://github.com/typeable/servant-swagger-ui

executable servant-openapi-ui-example
  main-is:          Main.hs
  ghc-options:      -threaded
  build-depends:
      aeson                        >=0.8.0.2  && <1.6
    , base                         >=4.7      && <4.15
    , base-compat                  >=0.9.3    && <0.12
    , lens                         >=4.7.0.1  && <4.20
    , openapi3
    , servant
    , servant-server
    , servant-openapi3
    , servant-openapi-ui
    , servant-openapi-ui-core
    , text
    , wai                          >=3.0.3.0  && <3.3
    , warp                         >=3.0.13.1 && <3.4

  hs-source-dirs:   src
  default-language: Haskell2010
