cabal-version:      1.12
name:               servant-openapi-ui
version:            0.0.1.0
synopsis:           Servant OpenAPI 3 UI
category:           Web, Servant, OpenAPI
description:
  Provide embedded Swagger UI for servant and OpenAPI 3 (i.e. servant-openapi3)
  .
  https://github.com/swagger-api/swagger-ui

homepage:           https://github.com/typeable/servant-swagger-ui
bug-reports:
  https://github.com/typeable/servant-swagger-ui/issues

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD3
license-file:       LICENSE
build-type:         Simple
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.2

extra-source-files:
  CHANGELOG.md
  index.html.tmpl
  swagger-ui-dist-3.36.1/favicon-16x16.png
  swagger-ui-dist-3.36.1/favicon-32x32.png
  swagger-ui-dist-3.36.1/oauth2-redirect.html
  swagger-ui-dist-3.36.1/swagger-ui-bundle.js
  swagger-ui-dist-3.36.1/swagger-ui-standalone-preset.js
  swagger-ui-dist-3.36.1/swagger-ui.css
  swagger-ui-dist-3.36.1/swagger-ui.js

source-repository head
  type:     git
  location: https://github.com/typeable/servant-swagger-ui

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:    servant-openapi-ui-core >=0.0.1 && <0.1
  build-depends:
      base             >=4.7      && <4.15
    , bytestring       >=0.10.4.0 && <0.11
    , file-embed-lzma  >=0        && <0.1
    , servant          >=0.14     && <0.19
    , servant-server   >=0.14     && <0.19
    , openapi3         >=3.0      && <3.1
    , text             >=1.2.3.0  && <1.3

  exposed-modules:  Servant.OpenApi.UI
  default-language: Haskell2010
